fixed the mobile responsive layout bug

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -70,4 +70,7 @@ body {
     margin: 0;
     border-radius: 0;
   }
+  @media only screen and (max-width: $bp-small) {
+    display: block;
+  }
 }
