--- a/src/sass/_upload.scss
+++ b/src/sass/_upload.scss
@@ -12,35 +12,35 @@
   z-index: 1000;
   transition: all 0.5s;
 
-  .btn--close-modal {
-    font-family: inherit;
-    color: inherit;
-    position: absolute;
-    top: 0.5rem;
-    right: 1.6rem;
-    font-size: 3.5rem;
-    cursor: pointer;
-    border: none;
-    background: none;
-  }
+  // .btn--close-modal {
+  //   font-family: inherit;
+  //   color: inherit;
+  //   position: absolute;
+  //   top: 0.5rem;
+  //   right: 1.6rem;
+  //   font-size: 3.5rem;
+  //   cursor: pointer;
+  //   border: none;
+  //   background: none;
+  // }
 }
 
-.overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.4);
-  backdrop-filter: blur(4px);
-  z-index: 100;
-  transition: all 0.5s;
-}
+// .overlay {
+//   position: fixed;
+//   top: 0;
+//   left: 0;
+//   width: 100%;
+//   height: 100%;
+//   background-color: rgba(0, 0, 0, 0.4);
+//   backdrop-filter: blur(4px);
+//   z-index: 100;
+//   transition: all 0.5s;
+// }
 
-.hidden {
-  visibility: hidden;
-  opacity: 0;
-}
+// .hidden {
+//   visibility: hidden;
+//   opacity: 0;
+// }
 
 .upload {
   display: grid;
